# CTF-Tools

./: Cargo.toml  LICENSE  README.md
binaries/: ctftools
src/: client.rs  connections.rs  macros.rs  main.rs  server.rs
src/commands/: command_close.rs  command_debug.rs  command_download.rs  command_exit.rs  command_generate.rs  command_help.rs  command_info.rs  command_linpeas.rs  command_list.rs  command_payloads.rs  command_select.rs  command_shell.rs  command_upload.rs  commands.rs  mod.rs
src/files/: download.rs  mod.rs  upload.rs
src/payloads/: mod.rs  payload_default.rs  payload_web.rs  payloads.rs
src/shell/: listener.rs  mod.rs  termios_handler.rs  unixshell.rs  winshell.rs
src/utils/: mod.rs  web.rs
