[package]
name = "CTF-Tools"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
rustyline = "14.0.0"
whoami = "1.5.1"
encoding_rs = "0.8.34"
curl = "0.4.46"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"
signal-hook = "0.3.17"

[profile.release]
opt-level = "z" #Optimize for size
lto = true
codegen-units = 1